# content-factory

./: .dockerignore  .gitignore  Dockerfile  README.md  clean_code.ps1  docker-compose.yml  pyproject.toml  requirements-test.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 3c01721362c7_add_triggers_and_refinements.py  7c3881a3c229_add_refined_context_to_render_jobs.py  93493ebb621c_initial_schema.py  9cc01f19d7d2_add_locked_columns_to_render_jobs.py  9d4cd07a11b1_init_content_factory.py  bf0566ee2b9e_init_content_factory.py  d5e094723ec6_add_missing_indices.py
app/: main.py
app/api/: routes.py
app/core/: config.py
app/db/: crud.py  models.py  session.py
app/schemas/: shorts.py
app/services/: chunking.py  llm.py  tools.py  vector_store.py  web_search.py
app/workers/: agents.py  optimizer.py  orchestrator.py  queue_worker.py  tasks.py
tests/: conftest.py
tests/agents/: conftest.py  test_asset_studio_agent.py  test_copywriter_agent.py  test_red_team_agent.py  test_research_agent.py
tests/integration/: agents-orchest-int.md  conftest.py  test_orchestrator_transitions.py
tests/unit/: test_chunking.py  test_config.py  test_crud.py  test_queue_worker.py  test_routes.py  test_vector_store.py
