[project]
name = "content-factory"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlalchemy>=2.0.28",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.29.0",
    "pgvector>=0.2.5",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.9.3",
    "google-generativeai>=0.5.0",
    "langchain>=0.1.13",
    "langchain-core>=0.1.33",
    "langchain-google-genai>=1.0.1",
    "langchain-tavily>=0.2.0",
    "tenacity>=8.2.3",
    "langchain-text-splitters>=0.0.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "deepeval>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "unit: deterministic code tests (no LLM calls)",
    "agent: agent output structure tests (mocked LLM)",
    "eval: DeepEval AI quality metrics (real LLM calls)",
    "integration: full pipeline or multi-component tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
target-version = "py311"
line-length = 88
